Updated with SGX command in script without e3